fix video thumbnail layout issue

--- a/styles.css
+++ b/styles.css
@@ -554,6 +554,12 @@ audio {
 #videoModal0, #videoModal1, #videoModal2, #videoModal3 {
   background-color: rgba(48, 48, 48, 0.8);
 }
+#widescreen-video-layout {
+  display: block;
+}
+#mobile-video-layout {
+  display: none;
+}
 
 
 
